--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sunny/aliyun-opensearch",
+    "name": "feng18/aliyun-opensearch",
     "description": "Aliyun OpenSearch for laravel5",
     "authors": [
         {
